RESOLVED FIXED313361
[Site Isolation] http/tests/xmlhttprequest/origin-allow-list-all.html fails
https://bugs.webkit.org/show_bug.cgi?id=313361
Summary [Site Isolation] http/tests/xmlhttprequest/origin-allow-list-all.html fails
Ryosuke Niwa
Reported 2026-04-26 14:09:33 PDT
http/tests/xmlhttprequest/origin-allow-list-all.html fails with --site-isolation.
Attachments
Ryosuke Niwa
Comment 1 2026-04-26 14:13:55 PDT
EWS
Comment 2 2026-04-29 10:09:15 PDT
Committed 312297@main (1fd159ccc6df): <https://commits.webkit.org/312297@main> Reviewed commits have been landed. Closing PR #63641 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2026-04-29 10:10:14 PDT
Note You need to log in before you can comment on or make changes to this bug.